--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 class="name">Calculator</h1>
     <div class="container">
         <div class="calculator">
             <form>
-                <div>
+                <div class="display">
                     <input type="text" name="display">
                 </div>
                 <div>
